# automatizacion-robotframeork-siman

./: .gitignore  GUIA_REPORTES.md  README.md  REPORTES_GENERADOS.md  export_test_reports.py  generate_detailed_report.py  index.html  pyproject.toml  requirements.txt  run_and_report.py  run_tests.py
.github/workflows/: robot-ci.yml
18/: index.html
18/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
18/export/: influxDbData.txt  prometheusData.txt
18/history/: categories-trend.json  history.json
18/widgets/: duration-trend.json  duration.json  executors.json  summary.json
19/: index.html
19/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
19/export/: influxDbData.txt  prometheusData.txt
19/history/: history.json  retry-trend.json
19/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  severity.json  summary.json
20/: index.html
20/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
20/export/: influxDbData.txt  prometheusData.txt
20/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
20/widgets/: categories-trend.json  duration.json  executors.json  suites.json  summary.json
21/: index.html
21/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
21/export/: influxDbData.txt  prometheusData.txt
21/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
21/widgets/: duration-trend.json  executors.json  status-chart.json  summary.json
22/: index.html
22/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
22/export/: influxDbData.txt  prometheusData.txt
22/history/: history.json
22/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
23/: index.html
23/export/: influxDbData.txt
24/: index.html
24/export/: influxDbData.txt
25/: index.html
25/export/: influxDbData.txt
26/: index.html
26/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
26/export/: influxDbData.txt  prometheusData.txt
26/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
26/widgets/: duration.json  executors.json  retry-trend.json  summary.json
27/: index.html
27/export/: influxDbData.txt
28/: index.html
28/export/: influxDbData.txt
29/: index.html
29/export/: influxDbData.txt
30/: index.html
30/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  (+1 more)
31/: index.html
32/: index.html
33/: index.html
34/: index.html
35/: index.html
36/: index.html
37/: index.html
38/: index.html
39/: index.html
40/: index.html
41/: index.html
42/: index.html
43/: index.html
allure/: index.html
configs/: env_prod.yaml  env_sandbox.yaml
last-history/: duration-trend.json  history-trend.json  retry-trend.json
(+3010 files in other folders)
